# turboquant-mission

./: .gitignore  AGENTS.md  RESEARCH_PAPER.md  run_validation_tests.py
.factory/: init.sh  services.yaml
.factory/skills/infrastructure-worker/: SKILL.md
.factory/skills/python-core-worker/: SKILL.md
.factory/skills/python-server-worker/: SKILL.md
.factory/skills/tui-worker/: SKILL.md
.factory/skills/typescript-core-worker/: SKILL.md
.factory/validation/backends/scrutiny/: synthesis.json
.factory/validation/backends/scrutiny/reviews/: kv-cache-quantization.json  llama-cpp-backend-adapter.json  (+1 more)
.factory/validation/backends/user-testing/: synthesis.json
.factory/validation/core-python/scrutiny/: synthesis.json
.factory/validation/core-python/user-testing/: synthesis.json
.factory/validation/quantization/scrutiny/: synthesis.json
.factory/validation/quantization/user-testing/: synthesis-round2.json  synthesis.json
.factory/validation/server/scrutiny/: synthesis.json
.factory/validation/server/user-testing/: synthesis-round2.json  synthesis-round3.json  synthesis-round5.json  synthesis.json
.factory/validation/tui/scrutiny/: synthesis.json
.factory/validation/typescript/scrutiny/: synthesis.json
.factory/validation/typescript/user-testing/: synthesis.json
python/: AGENTS.md  README.md  pyproject.toml
python/benchmarks/: weight_quantization.py
python/src/llm_compress/: __init__.py  cli.py  download.py
python/src/llm_compress.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
python/src/llm_compress/backends/: __init__.py  base.py  llama_cpp.py  registry.py  vllm.py
python/src/llm_compress/quantization/: __init__.py  kv_cache.py  layer_wise.py  weight.py
python/src/llm_compress/server/: __init__.py  app.py  models.py
python/tests/: test_api_server.py  test_basic.py  test_cli_help.py  test_download.py  test_kv_cache.py  test_layer_wise.py  test_list_remove.py  test_llama_cpp_backend.py  test_quantization.py  test_quantize.py  test_serve.py  test_vllm_backend.py
python/tests/quantization/: test_weight_quantization.py  test_weight_quantization_standalone.py
tests/tui/: test_download.sh
typescript/: AGENTS.md  README.md  package.json  tsconfig.cjs.json  tsconfig.esm.json  tsconfig.json
typescript/scripts/: test-tui.ts
typescript/src/: cli.ts  index.ts
typescript/src/backends/: index.ts  types.ts
typescript/src/quantization/: index.ts  kv_cache.ts  types.ts  weight.ts
typescript/src/server/: index.ts  types.ts
typescript/src/tui/: index.ts
typescript/tests/: accuracy_comparison.test.ts  benchmark.test.ts  kv_cache_quantization.test.ts  tui.test.ts  weight_quantization.test.ts
(+26 files in other folders)
