[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-compress"
version = "0.1.0"
description = "Unified LLM Quantization & Inference System with TurboQuant and AirLLM"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "llm-compress Team", email = "team@llm-compress.dev"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0",
    "transformers>=4.40.0",
    "accelerate>=0.25.0",
    "huggingface-hub>=0.20.0",
    "vllm>=0.6.0; python_version<'3.14'",
    "click>=8.1.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "numpy>=1.24.0",
    "bitsandbytes>=0.42.0",
    "triton>=2.2.0; python_version<'3.14'",
    "tqdm>=4.66.0",
    "safetensors>=0.4.0",
    "sentencepiece>=0.1.99",
    "protobuf>=3.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
    "black>=23.12.0",
    "build>=1.0.0",
    "twine>=5.0.0",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "httpx>=0.26.0",
]

[project.scripts]
llm-compress = "llm_compress.cli:main"

[project.urls]
Homepage = "https://github.com/llm-compress/llm-compress"
Documentation = "https://llm-compress.readthedocs.io"
Repository = "https://github.com/llm-compress/llm-compress"
Issues = "https://github.com/llm-compress/llm-compress/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
llm_compress = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
ignore_missing_imports = true
exclude = ["google"] 

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/llm_compress"]
